test/src/e2e_vm_tests/test_programs/should_fail/str_slice_contract/src/main.sw
contract;

// str are not allowed in storage
storage {
    a: str = "a",
}